# cuda-tensorops

./: CMakeLists.txt  README.md  requirements.txt
examples/: cuda_llama.py  fine_tune_cuda_llama.py  lora_integration.py
include/: cuda_tensor_ops.h
src/: gemm_kernel.cu  layer_norm_kernel.cu
